<resources>
    <string name="app_name">TrelloApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_name">work_name</string>
    <string name="image_theme">Image Theme</string>
    <string name="text_intro_first">Hoàn thành nhiều việc hơn với Trello</string>
    <string name="text_intro_second">Lập kế hoạch, theo dõi và tổ chức sự kiện</string>
    <string name="text_sign_up">Đăng ký</string>
    <string name="text_login">Đăng nhập</string>
    <string name="image_trello_logo">Image Trello Logo</string>
    <string name="text_policy">Bằng việc đăng ký, bạn đồng ý với điều khoản dịch vụ và chính sách riêng tư của chúng tôi</string>
    <string name="text_password">Password</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_choose_avatar">Chọn ảnh đại diện của bạn</string>
    <string name="text_start">Bắt đầu</string>
    <string name="text_description_login">Đăng nhập bằng tài khoản của bạn</string>
    <string name="sign_up_action_bar_title">Đăng Ký</string>
    <string name="login_action_bar_title">Đăng Nhập</string>
    <string name="add_board_bar_title">Create Board</string>
    <string name="home_bar_title">Boards</string>
    <string name="text_description_sign_up">Vui lòng nhập tên,\nđịa chỉ email và mật khẩu để tiếp tục</string>
    <string name="account_name">Account Name</string>
    <string name="edit_text_error">Vui lòng điền vào trường này</string>
    <string name="message_invalid_acc_or_pass">Tài khoản email hoặc mật khẩu không hợp lệ</string>
    <string name="message_empty_input">Vui lòng nhập đầy đủ thông tin cần thiết để đăng ký</string>
    <string name="message_sign_up_failed">Email đã tồn tại, vui lòng đăng ký bằng tài khoản khác hoặc đăng nhập để tiếp tục</string>
    <string name="title_sign_up_failed">Đăng Ký không thành công</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="title_error_empty_input">Lỗi</string>
    <string name="title_invalid_acc_or_pass">Thông tin không hợp lệ</string>
    <string name="message_login_failed">Thông tin tài khoản hoặc mật khẩu không chính xác</string>
    <string name="title_login_failed">Đăng nhập không thành công</string>
    <string name="text_title_add_list">Thêm danh sách</string>
    <string name="text_cancel_list">Hủy</string>
    <string name="text_add_list">Thêm</string>
    <string name="text_card_name">Tên thẻ</string>
    <string name="text_title_add_card">+ Thêm thẻ</string>
    <string name="text_cancel_card">Hủy</string>
    <string name="text_add_card">Thêm</string>
    <string name="end_time">Ngày hết hạn...</string>
    <string name="start_time">Ngày bắt đầu...</string>
    <string name="label">Các nhãn</string>
    <string name="card_detail">Card Detail</string>
    <string name="user_id">userId</string>
    <string name="member">Các thành viên</string>
    <string name="workspaces">Workspaces</string>
    <string name="board_name">Board name</string>
    <string name="add_board">Add board</string>
    <string name="member_name">Member</string>
    <string name="member_email">Member Email</string>
    <string name="add_member">Add member</string>
    <string name="workspaces_bar_title">"Workspaces "</string>
    <string name="hotline">Hotline: 0386789994</string>
    <string name="text_help">Nếu bạn gặp sự cố trong quá trình sử dụng hãy liên hệ ngay với chúng tôi để được hỗ trợ.</string>
    <string name="text_help2">Xin cảm ơn!</string>

</resources>