<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_12"
    app:cardCornerRadius="@dimen/radius_10">

    <LinearLayout
        android:background="@color/main_list"
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            app:cardBackgroundColor="@color/main_list">

            <LinearLayout
                android:id="@+id/ll_container_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_add_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingVertical="@dimen/padding_16"
                    android:text="@string/text_title_add_list"
                    android:textColor="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_list_layout"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginHorizontal="@dimen/margin_4"
                    app:boxBackgroundColor="@color/color_edit_list">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_gravity="center_vertical"
                        android:id="@+id/ed_list"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:layout_height="@dimen/ed_sig_up_height"
                        android:inputType="text"
                        android:textSize="@dimen/text_size_16" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_marginBottom="@dimen/margin_12"
                    android:id="@+id/ll_action_list"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cancel_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/padding_8"
                        android:layout_marginStart="@dimen/margin_12"
                        android:layout_marginTop="@dimen/margin_8"
                        android:text="@string/text_cancel_list"
                        android:textColor="@color/color_intro_background"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:id="@+id/tv_add_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_162"
                        android:paddingHorizontal="@dimen/padding_8"
                        android:layout_marginTop="@dimen/margin_8"
                        android:text="@string/text_add_list"
                        android:textColor="@color/color_intro_background"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardBackgroundColor="@color/main_list"
            app:cardCornerRadius="@dimen/radius_10">

            <LinearLayout
                android:id="@+id/ll_container_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:visibility="gone"
                    android:id="@+id/tv_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingVertical="@dimen/padding_16"
                    android:text="@string/text_card_name"
                    android:textColor="@color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_card"
                    android:layout_marginHorizontal="@dimen/margin_4"
                    android:layout_width="match_parent"
                    android:layout_height="260dp" />

                <TextView
                    android:id="@+id/tv_title_add_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingVertical="@dimen/padding_16"
                    android:text="@string/text_title_add_card"
                    android:textSize="@dimen/text_size_12"
                    android:textColor="#9D9D9F" />

                <com.google.android.material.textfield.TextInputLayout
                    android:visibility="gone"
                    android:id="@+id/ed_card_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginHorizontal="@dimen/margin_4"
                    app:boxBackgroundColor="@color/color_edit_list">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ed_card"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/ed_sig_up_height"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/ll_action_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_12"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cancel_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_12"
                        android:layout_marginTop="@dimen/margin_8"
                        android:paddingHorizontal="@dimen/padding_8"
                        android:text="@string/text_cancel_card"
                        android:textColor="@color/color_intro_background"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:id="@+id/tv_add_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_162"
                        android:paddingHorizontal="@dimen/padding_8"
                        android:layout_marginTop="@dimen/margin_8"
                        android:text="@string/text_add_card"
                        android:textColor="@color/color_intro_background"
                        android:textSize="@dimen/text_size_16" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.cardview.widget.CardView>
